fix(choice-group): TEHVEER-296 - Move the vertical spacing from Check and Radio to ChoiceGroup

--- a/packages/components/src/components/form/check/check.module.scss
+++ b/packages/components/src/components/form/check/check.module.scss
@@ -17,7 +17,7 @@
 
 .check__indicator {
   position: relative;
-  display: inline-block;
+  display: block;
   min-width: 1.125rem;
   height: 1.125rem;
   margin-top: 0.125rem;
