--- a/packages/components/src/components/form/choice-group/choice-group.module.scss
+++ b/packages/components/src/components/form/choice-group/choice-group.module.scss
@@ -8,3 +8,7 @@
 .choice-group__inner--indented {
   padding-left: 1rem;
 }
+
+.choice-group__item--extra-padding {
+  padding-bottom: 0.5rem;
+}
